Added AI Code generation Functionality & Code preview functionality using kubernetes